refactor: 商品名の画面表示＆検索（未完成）
